Se agrega verified SAG y modulo business

--- a/plataformaGestionPredial/src/app/forms/forms.component.css
+++ b/plataformaGestionPredial/src/app/forms/forms.component.css
@@ -23,6 +23,9 @@ img {
     /* font-weight: bold; */
   }
 
+  #goBack{
+    float: right;
+  }
   /* button:disabled{
     cursor:not-allowed;
     opacity:0.5
