--- a/plataformaGestionPredial/src/app/sidebar/sidebar.component.html
+++ b/plataformaGestionPredial/src/app/sidebar/sidebar.component.html
@@ -93,14 +93,22 @@
 </div> -->
 
 <!-- NEGOCIOS -->
-<div class="row menu" routerLink="/">
+<div class="row menu" (click)="changeOpenLinks(4)">
     <div class="col-3">
         <i class="fa-solid fa-handshake-simple"></i>
     </div>
     <div class="col-9">
-        <!-- <a class="nav-link" >Identificadores<i class="bi bi-caret-right"></i></a> -->
-        <a class="nav-link" >Business<span class="badge badge-secondary">PRO</span></a>
+        <a class="nav-link" >Business
+            <i [ngClass]="menus[3].open ? 'bi bi-caret-down' : 'bi bi-caret-right'"></i>
+        </a>
+        <!-- <a class="nav-link" >Business</a> -->
     </div>
+</div>
+<div *ngIf="menus[3].open" class="row submenu">
+    <ul>
+        <li routerLink="/business" id="1"(click)="addClass(1)"><i class="fa-solid fa-list-ol"></i>List<span class="badge badge-secondary"></span></li>
+       <li routerLink="/business" id="2"(click)="addClass(2)"><i class="fa-solid fa-plus"></i>Register<span class="badge badge-secondary"></span></li>
+    </ul>
 </div>
 
 
