En funcionamiento filtro de estado

--- a/plataformaGestionPredial/src/app/list/list.component.html
+++ b/plataformaGestionPredial/src/app/list/list.component.html
@@ -34,8 +34,8 @@
             <div class="col-xs-3 col-sm-auto">
               <select class="form-select" size="3" name="state" multiple [(ngModel)]="service.state">
                   <option value="all">All</option>
-                  <option value="alive">Alive</option>
-                  <!-- <option value="sold">Sold</option> -->
+                  <option value="Vivo">Alive</option>
+                  <option value="Vendido">Sold</option>
                   <option value="Muerto">Die</option>
               </select>
             </div>
