--- a/plataformaGestionPredial/src/app/forms/forms.component.html
+++ b/plataformaGestionPredial/src/app/forms/forms.component.html
@@ -64,7 +64,7 @@
                         </div>
                         <div *ngIf="field.type=='select'" class="form-group mb-2">
                             <label for="{{field.name}}">{{field.name}}<span *ngIf="field.required"> *</span></label>
-                            <select (change)="changeSelect($event)" class="form-select" name="{{field.name}}" [(ngModel)]="field.value" id="{{field.name}}" [required]="field.required" #i="ngModel">
+                            <select [multiple]="field.multiple" (change)="changeSelect($event)" class="form-select" name="{{field.name}}" [(ngModel)]="field.value" id="{{field.name}}" [required]="field.required" #i="ngModel">
                                 <option value="">Select</option>
                                 <ng-container *ngFor="let option of field.options; let i = index">
                                     <option value="{{option.value}}" selected="{{option.selected}}">{{option.name}}</option>
