--- a/plataformaGestionPredial/src/app/forms/forms.component.css
+++ b/plataformaGestionPredial/src/app/forms/forms.component.css
@@ -26,6 +26,13 @@ img {
   #goBack{
     float: right;
   }
+
+  #container-form{
+    text-align: center;
+    padding-top: 20%;
+    vertical-align: text-bottom;
+    height: 100%;
+  }
   /* button:disabled{
     cursor:not-allowed;
     opacity:0.5
