En funcionamiento datatables

--- a/plataformaGestionPredial/src/app/dashboard/dashboard.component.html
+++ b/plataformaGestionPredial/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,8 @@
 <div class="center">  
-  <i class="fa-solid fa-cow fa-2xl"></i> 27
-  <i class="fa-solid fa-chart-line fa-2xl"></i> 12
+  <h1>Summarize</h1>
+  <i class="fa-solid fa-cow fa-2xl"></i> 27 <br><br>
+  <i class="fa-solid fa-chart-line fa-2xl"></i> 12 <br><br>
+  <i class="fa-solid fa-box fa-2xl"></i> 40
 </div>    
   
   
