--- a/plataformaGestionPredial/src/app/sidebar/sidebar.component.html
+++ b/plataformaGestionPredial/src/app/sidebar/sidebar.component.html
@@ -42,7 +42,7 @@
 <div *ngIf="menus[2].open" class="row submenu">
     <ul>
         <li routerLink="/documents" id="1"(click)="addClass(1)"><i class="fa-solid fa-list-ol"></i>List<span class="badge badge-secondary"></span></li>
-       <li routerLink="/documents" id="2"(click)="addClass(2)"><i class="fa-solid fa-plus"></i>Create<span class="badge badge-secondary"></span></li>
+       <li routerLink="/documents/create" id="2"(click)="addClass(2)"><i class="fa-solid fa-plus"></i>Create<span class="badge badge-secondary"></span></li>
     </ul>
 </div>
 
