--- a/plataformaGestionPredial/src/app/shared/table/table.component.html
+++ b/plataformaGestionPredial/src/app/shared/table/table.component.html
@@ -1,6 +1,4 @@
-<!-- <div *ngIf="configurations.initialLoading==false; else elseBlock" class="container mb-2"></div> -->
-<div *ngIf="data; else elseBlock"  class="container p-2">    
-    <!-- <table datatable [dtOptions]="dtOptions" class="row-border hover"> -->
+<div *ngIf="data; else elseBlock" >    
     <table datatable [dtOptions]="dtOptions" class="row-border hover">
     </table>
 </div>  
