--- a/plataformaGestionPredial/src/app/list/list.component.html
+++ b/plataformaGestionPredial/src/app/list/list.component.html
@@ -105,7 +105,11 @@
           <div class="d-flex justify-content-between p-2">
             <ngb-pagination [collectionSize]="(total$ | async)!" [(page)]="service.page" [pageSize]="service.pageSize">
             </ngb-pagination>
-            <p class="mt-2">Showing {{(items$|async)?.length}} of a total of {{(total$ | async)!}} bovines</p>
+            <p class="mt-2">Showing {{(items$|async)?.length}} of a total of {{(total$ | async)!}} bovines</p> 
+            <div class="col-xs-3 col-sm-auto">
+              <label for="" class="col-xs-3 col-sm-auto col-form-label p-2"><b>Download PDF</b></label>
+              <i class="fa-solid fa-file-pdf fa-2xl"></i>
+            </div>
             <select class="form-select" style="width: auto" name="pageSize" [(ngModel)]="service.pageSize">
               <option [ngValue]="5">5 bovines per page</option>
               <option [ngValue]="10">10 bovines per page</option>
