--- a/plataformaGestionPredial/src/app/sidebar/sidebar.component.html
+++ b/plataformaGestionPredial/src/app/sidebar/sidebar.component.html
@@ -47,14 +47,22 @@
 </div>
 
 <!-- IDENTIFICADORES -->
-<div class="row menu" routerLink="/identifiers">
+<div class="row menu" (click)="changeOpenLinks(6)">
     <div class="col-3">
         <i class="bi bi-postcard"></i>
     </div>
     <div class="col-9">
         <!-- <a class="nav-link" >Identificadores<i class="bi bi-caret-right"></i></a> -->
-        <a class="nav-link" >Identifiers</a>
+        <a class="nav-link" >Identifiers
+            <i [ngClass]="menus[5].open ? 'bi bi-caret-down' : 'bi bi-caret-right'"></i>
+        </a>
     </div>
+</div>
+<div *ngIf="menus[5].open" class="row submenu">
+    <ul>
+        <li routerLink="/identifiers" id="1"(click)="addClass(1)"><i class="fa-solid fa-list-ol"></i>List<span class="badge badge-secondary"></span></li>
+       <li routerLink="/identifiers/create" id="2"(click)="addClass(2)"><i class="fa-solid fa-plus"></i>Create<span class="badge badge-secondary"></span></li>
+    </ul>
 </div>
 
 
