Avance listado en pdf

--- a/plataformaGestionPredial/src/app/shared/table/table.component.html
+++ b/plataformaGestionPredial/src/app/shared/table/table.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="data; else elseBlock" >    
+<div *ngIf="data; else elseBlock" class="container p-4" >    
     <table datatable [dtOptions]="dtOptions" class="row-border hover">
     </table>
 </div>  
