--- a/plataformaGestionPredial/src/app/list/list.component.html
+++ b/plataformaGestionPredial/src/app/list/list.component.html
@@ -54,7 +54,7 @@
             </div></span>
           </div>
       
-          <table class="table table-striped" >
+          <table id="tableBovines" class="table table-striped" >
             <thead style="position: sticky">
               <tr>
                 <th scope="col">#</th>
@@ -107,8 +107,8 @@
             </ngb-pagination>
             <p class="mt-2">Showing {{(items$|async)?.length}} of a total of {{(total$ | async)!}} bovines</p> 
             <div class="col-xs-3 col-sm-auto">
-              <label for="" class="col-xs-3 col-sm-auto col-form-label p-2"><b>Download PDF</b></label>
-              <i class="fa-solid fa-file-pdf fa-2xl"></i>
+              <label for="" class="col-xs-3 col-sm-auto col-form-label p-2"><b>Download list</b></label>
+              <i style="cursor:Pointer" (click)="downloadPdf();" class="fa-solid fa-file-pdf fa-2xl"></i>
             </div>
             <select class="form-select" style="width: auto" name="pageSize" [(ngModel)]="service.pageSize">
               <option [ngValue]="5">5 bovines per page</option>
