--- a/plataformaGestionPredial/src/app/dashboard/dashboard.component.css
+++ b/plataformaGestionPredial/src/app/dashboard/dashboard.component.css
@@ -1,8 +1,26 @@
-.center {
-    /* border: 5px solid; */
-    position: absolute;
+i,label {
+    position: relative;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     padding: 10px;
+    color: black;
+    display: inline;
+    /* width: 100%;
+    height: 100%; */
   }
+ 
+  /* i{
+    transform: translate(-50%, -50%);
+    position: relative; 
+    display: inline-flexbox;
+    border: 2px solid black; 
+    height: 45%;
+    width: 45%;
+  } */
+.centered{height: 80vh; width: 100%; padding: 0; margin: 0; position: relative; }
+div { width: 50%; height: 50%; float: left; }
+#div1 { background: #DDD; }
+#div2 { background: #DDD; }
+#div3 { background: #DDD; }
+#div4 { background: #DDD; }
