--- a/plataformaGestionPredial/src/app/dashboard/dashboard.component.html
+++ b/plataformaGestionPredial/src/app/dashboard/dashboard.component.html
@@ -1,8 +1,21 @@
-<div class="center">  
-  <h1>Summarize</h1>
-  <i class="fa-solid fa-cow fa-2xl"></i> 27 <br><br>
+<div class="centered">  
+  <!-- <h1>Summarize</h1> -->
+  <div id="div1" class="module">
+    <i class="fa-solid fa-cow fa-2xl"></i><label for="">48</label>
+  </div>
+  <div id="div2" class="module">
+    <i class="bi bi-files fa-2xl"></i><label for="">2</label>
+  </div>
+  <div id="div3" class="module">
+    <i class="bi bi-postcard fa-2xl"></i><label for="">50</label>
+  </div>
+  <div id="div4" class="module">
+    <i class="fa-solid fa-handshake-simple fa-2xl"></i><label for="">0</label>
+    <!-- <i class="fa-solid fa-box fa-2xl"></i><label for="">40</label> -->
+  </div>
+  <!-- <i class="fa-solid fa-cow fa-2xl"></i> 27 <br><br>
   <i class="fa-solid fa-chart-line fa-2xl"></i> 12 <br><br>
-  <i class="fa-solid fa-box fa-2xl"></i> 40
+  <i class="fa-solid fa-box fa-2xl"></i> 40 -->
 </div>    
   
   
