--- a/plataformaGestionPredial/src/app/sidebar/sidebar.component.html
+++ b/plataformaGestionPredial/src/app/sidebar/sidebar.component.html
@@ -25,6 +25,7 @@
     <ul>
        <li routerLink="/bovines" id="1"(click)="addClass(1)"><i class="fa-solid fa-list-ol"></i>List</li>
        <li routerLink="/bovines/create" id="2"(click)="addClass(2)"><i class="fa-solid fa-plus"></i>Create</li>
+       <!-- <li routerLink="/bovines/delete" id="13"(click)="addClass(13)"><i class="fa-solid fa-minus"></i>Delete</li> -->
     </ul>
 </div>
 
@@ -128,8 +129,8 @@
 </div>
 <div *ngIf="menus[1].open" class="row submenu">
     <ul>
-        <li id="1"(click)="addClass(11)"><i class="fa-solid fa-syringe"></i>Medicaments<span class="badge badge-secondary">PRO</span></li>
-       <li id="2"(click)="addClass(12)"><i class="fa-solid fa-screwdriver-wrench"></i>Carpentry<span class="badge badge-secondary">PRO</span></li>
+        <li id="11"(click)="addClass(11)"><i class="fa-solid fa-syringe"></i>Medicaments<span class="badge badge-secondary">PRO</span></li>
+       <li id="12"(click)="addClass(12)"><i class="fa-solid fa-screwdriver-wrench"></i>Carpentry<span class="badge badge-secondary">PRO</span></li>
     </ul>
 </div>
 
